# configure.in
# Copyright 2010 Daniel Mende <dmende@ernw.de> 

AC_PREREQ([2.61])
AC_INIT([loki], [0.2], [bugs@c0decafe.de])
AM_INIT_AUTOMAKE(loki, 0.2)

# Initialize prefix.
if test "$prefix" = "NONE"; then
   prefix="/usr/local"
fi

# Checks for programs.
AC_PROG_CC
AC_PROG_SED
AC_PROG_MAKE_SET
AM_PATH_PYTHON([2.6])

# Checks for libraries.
AC_CHECK_LIB(pcap, pcap_open_live)
AC_CHECK_LIB(crypt, encrypt)
AC_CHECK_LIB(crypto, MD4)
AC_CHECK_LIB(ssl, [SHA1_Init, DES_ecb_encrypt])
AC_CHECK_LIB(dnet, eth_open)

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdint.h stdlib.h string.h sys/ioctl.h sys/socket.h sys/time.h syslog.h unistd.h])
AC_CHECK_HEADERS([netpacket/packet.h linux/if.h linux/if_tun.h linux/wireless.h crypt.h openssl/des.h endian.h sys/endian.h])
AC_CHECK_HEADERS([openssl/md4.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_FSEEKO
AC_FUNC_MALLOC
AC_CHECK_FUNCS([bzero getcwd gethostbyname gettimeofday inet_ntoa memset mkdir select socket strchr strerror strtoul])

# Error conditions
if test "$ac_cv_lib_pcap_pcap_open_live" = no ; then
    AC_ERROR(libpcap not found!)
fi
if test "$ac_cv_lib_ssl_SHA1_Init" = no ; then
    AC_ERROR(libssl not found!)
else
    if test "$ac_cv_lib_crypt_encrypt" = no ; then
        if test "$ac_cv_lib_ssl_DES_ecb_encrypt" = no ; then
            AC_ERROR(no usable DES implementation found!)
        fi
    fi
fi


AC_CONFIG_FILES([Makefile
                 lib/Makefile
                 lib/asleap/Makefile
                 modules/Makefile
                 setup.py])
AC_OUTPUT
