# Makefile.am
# Copyright 2010 Daniel Mende <dmende@ernw.de> 

instdir = @datarootdir@/loki/modules
inst_DATA = mac.txt module_arp.py module_arp.glade module_bfd.py module_bfd.glade module_bgp.py module_bgp.glade module_eigrp.py module_eigrp.glade module_hsrp.py module_hsrp.glade module_hsrp2.py module_hsrp2.glade module_icmp6.py module_icmp6.glade module_ldp.py module_ldp.glade module_mpls.py module_mpls.glade module_ospf.py module_ospf.glade module_rip.py module_rip.glade module_tcp-md5.py module_tcp-md5.glade module_vrrp.py module_vrrp.glade module_wlccp.py module_wlccp.glade 

